src/main/metadata-au/objects/SMSReplyHistory__c.object
<CustomObject>
    <description>Keep customer&apos;s reply here and to be displayed under SMS task</description>
    <fields>
        <fullName>ContactName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SMS Reply Histories</relationshipLabel>
        <relationshipName>SMSReplyHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsFirstValid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is First Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsValid__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Valid?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MMSTemplate__c</fullName>
        <label>MMS Template</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedCampaign__c</fullName>
        <label>Related Campaign</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RespondTime__c</fullName>
        <description>Real time end user replies SMS</description>
        <label>Respond Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ResponseContent__c</fullName>
        <description>The whole message from end user and will be divided into SMS Content&amp;SMS Code by coding,must be hidden to all Salesforce users</description>
        <label>Response Content</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMSCode__c</fullName>
        <description>Customer reply code</description>
        <label>SMS Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMSContent__c</fullName>
        <description>SMS Reply Content</description>
        <label>SMS Content</label>
        <length>1002</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMSSentTime__c</fullName>
        <description>Real time SMS sent from Fractalist</description>
        <label>SMS Sent Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMSTask__c</fullName>
        <description>To display task as a link</description>
        <formula>HYPERLINK(TaskID__c, TaskID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SMS Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesPerson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SMSReplyHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaskID__c</fullName>
        <description>Display SMS Task only, this field will be hidden</description>
        <label>Task ID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template</label>
        <referenceTo>Template__c</referenceTo>
        <relationshipLabel>SMS Reply Histories</relationshipLabel>
        <relationshipName>SMSReplyHistories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ValidReply__c</fullName>
        <description>Not shown to user, just for VF section display</description>
        <formula>IF( IsValid__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid Reply?</label>
        <type>Text</type>
    </fields>
    <label>SMS Reply History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ContactName__c</columns>
        <columns>IsValid__c</columns>
        <columns>ResponseContent__c</columns>
        <columns>RespondTime__c</columns>
        <columns>SMSSentTime__c</columns>
        <columns>Template__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>SMS Reply History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Reply Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>